--- a/index.html
+++ b/index.html
@@ -35,8 +35,22 @@
     <canvas id="color-picker-canvas" width="150" height="150"></canvas>
   </div>
 
-  <span id="links-para"><a href="https://x.com/measure_plan" target="_blank">Twitter</a> | <a href="https://www.instagram.com/stereo.drift/" target="_blank">Instagram</a> | <a href="https://github.com/collidingScopes/3D-editor" target="_blank">Code</a></span>
-  <span id="coffee-link"><a href="https://buymeacoffee.com/stereodrift" target="_blank">Support my free tutorials & code ❤️</a></span>  
+  <div id="instruction-text" class="text-box">
+      <span>> right hand: pinch to grab / move a corner of the cube</span><br>
+      <span>> left hand: make a fist and move to rotate the shape</span>
+  </div>
+  <div id="social-links" class="text-box">
+      <a href="https://www.x.com/measure_plan/" target="_blank">> Twitter</a><br>
+      <a href="https://www.instagram.com/stereo.drift/" target="_blank">> Instagram</a><br>
+      <a href="https://youtube.com/@funwithcomputervision" target="_blank">> Youtube</a>
+  </div>
+  <div id="coffee-link" class="text-box">
+      <a href="https://buymeacoffee.com/stereodrift" target="_blank">Buy me a coffee 💛</a>
+  </div>
+  <div id="logo-container" class="text-box">
+      <span id="logo">🪬</span><br>
+      <a href="https://funwithcomputervision.com/" target="_blank">code & tutorials here</a>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
